<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/seconds_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ping_text" />

    <EditText
        android:id="@+id/edit_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seconds_view"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:text="@string/seconds_default"
        android:inputType="numberSigned">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/reminder_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_seconds"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/reminder_label" />

    <EditText
        android:id="@+id/edit_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_seconds"
        android:layout_below="@+id/reminder_view"
        android:ems="10"
        android:text="@string/reminder_text"
        android:inputType="textMultiLine" />
    <TextView
        android:id="@+id/numberOfNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_reminder"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_of_notifications" />

    <EditText
        android:id="@+id/edit_numberOfNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_seconds"
        android:layout_below="@+id/numberOfNotifications"
        android:ems="10"
        android:text="1"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/ping_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_numberOfNotifications"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:onClick="onPingClick"
        android:text="@string/ping" />

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnClearNotify"
        android:layout_alignRight="@+id/btnClearNotify"
        android:layout_alignLeft="@+id/reminder_view" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/priority_spinner">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="NotificationListenerService Example"
            android:id="@+id/textView"
            />

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear All Notification"
        android:id="@+id/btnClearNotify"
        android:layout_alignTop="@+id/btnCreateNotify"
        android:layout_alignRight="@+id/seconds_view"
        android:layout_toRightOf="@+id/btnCreateNotify"
        android:onClick="onPingClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Notification"
        android:id="@+id/btnCreateNotify"
        android:layout_below="@+id/ping_button"
        android:layout_toLeftOf="@+id/reminder_view"
        android:onClick="onPingClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="List of Notification"
        android:id="@+id/btnListNotify"
        android:layout_alignTop="@+id/btnClearNotify"
        android:layout_toRightOf="@+id/priority_spinner"
        android:onClick="onPingClick" />

</RelativeLayout>